# crypto-games

./: CMakeLists.txt  README.md  game1_xor.c  game1_xor.h  game2_pow.c  game2_pow.h  game3_merkletree.c  game3_merkletree.h  main.c
